# xdmod-python

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  setup.cfg  setup.py
.circleci/: config.yml  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docker-compose.yaml  python-package.yml  xdmod-data.yml
docs/: conf.py  developing.md  development.md  index.rst  requirements.txt
tests/ci/scripts/: run-tests.sh
tests/functional/: test_datawarehouse.py  test_datawarehouse_functional.py
tests/functional/data/: machine-learning-notebook-example-every-1000.csv  xdmod-dev-jobs-nsfstatus-filters.csv
tests/integration/: test_datawarehouse.py  test_datawarehouse_integration.py
tests/regression/: test_datawarehouse_functional.py  test_datawarehouse_regression.py
tests/regression/data/: jobs-2016-2017-month.csv  jobs-2016-2017-quarters.csv  jobs-2016-2017-years.csv  jobs-2022-2023-years.csv  jobs-2023-months.csv  jobs-2023-quarters.csv  jobs-dimensions.csv  jobs-fieldofscience-filter-values.csv  jobs-metrics.csv  machine-learning-notebook-example-every-1000.csv  realms.csv  xdmod-dev-jobs-dimensions.csv  xdmod-dev-jobs-fieldofscience-filter-values.csv  xdmod-dev-jobs-metrics.csv  xdmod-dev-realms.csv
tests/regression/data/default/: jobs-2016-2017-month.csv  jobs-2016-2017-quarters.csv  jobs-2016-2017-years.csv  jobs-dimensions.csv  jobs-metrics.csv  jobs-pi-group-filter-values.csv  raw-data-every-1000-no-fields-no-filters.csv  raw-data-every-1000-with-fields-and-filters.csv  (+1 more)
tests/unit/: TestDataWarehouse.py  test_datawarehouse.py  test_datawarehouse_unit.py
xdmod/: .datawarehouse.py.swp  __version__.py  _descriptors.py  _http_requester.py  _response_processor.py  _validator.py  datawarehouse.py  themes.py  visualizer.py
xdmod_data/: __version__.py  _descriptors.py  _http_requester.py  _response_processor.py  _validator.py  themes.py  warehouse.py
(+8 files in other folders)
