[metadata]
name = xdmod-data
version = attr: xdmod_data.__version__
author = Aaron Weeden, Joseph P. White
maintainer = Aaron Weeden, Joseph P. White
description = Python driver for XDMoD
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
project_urls =
    Source Code = https://github.com/ubccr/xdmod-data

[options]
packages = find:
python_requires = >=3
install_requires =
    numpy
    pandas
    plotly
    requests
