[metadata]
name = xdmod-data
version = attr: xdmod_data.__version__
author = Aaron Weeden, Joseph P. White
maintainer = Aaron Weeden, Joseph P. White
description = Python package for XDMoD data access
long_description = See `the README <https://github.com/ubccr/xdmod-data?tab=readme-ov-file#xdmod-data>`_ for instructions on use.
long_description_content_type = text/x-rst
license_files = LICENSE
project_urls =
    Source Code = https://github.com/ubccr/xdmod-data

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy >= 1.23.0
    pandas >= 1.5.0
    plotly >= 5.8.0
    requests >= 2.19.0
