[metadata]
name = xdmod-data
version = attr: xdmod_data.__version__
author = Aaron Weeden, Joseph P. White, Rodney Garnett
maintainer = Aaron Weeden, Joseph P. White
description = Python package for Open XDMoD data access
long_description = See the [README](https://github.com/ubccr/xdmod-data/tree/v1.0.2?tab=readme-ov-file#xdmod-data) for instructions on use.
long_description_content_type = text/markdown
license_files = LICENSE
project_urls =
    Source Code = https://github.com/ubccr/xdmod-data

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy >= 1.23.0
    pandas >= 1.5.0
    plotly >= 5.8.0
    python-dotenv >= 1.0.0
    requests >= 2.19.0
